--- a/style.css
+++ b/style.css
@@ -13,12 +13,11 @@ header {
     padding: 10px 0;
 }
 .navbar {
-background-image: url(imagenes/banner.webp);
-height: 50px;
-padding: 5%;
-font-family: Arial, Helvetica, sans-serif;
-font-size: large;
-
+        background-image: url(imagenes/banner.webp);
+        height: 50px;
+        padding: 5%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: large;
 }
 h2{
     color: white;
@@ -46,7 +45,7 @@ form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 900px;
+    max-width: 950px;
     transition: transform 0.3s, opacity 0.3s;
 }
 
@@ -78,7 +77,7 @@ select {
 button {
     background-color: #333;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -90,7 +89,7 @@ button:hover {
 }
 
 /* estilo de responsive */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     form {
         padding: 10px;
         transform: scale(0.9);
@@ -100,15 +99,13 @@ button:hover {
     input[type="email"],
     select {
         padding: 5px;
-        margin-bottom: 10px;
+        margin-bottom: 10px;      
     }
 }
-
 /* Animación para la entrada*/
 section {
     animation: fadeIn 1s ease-in-out;
 }
-
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -124,19 +121,16 @@ section {
     padding: 20px;
     text-align: center;
 }
-
 .image-gallery h2 {
     color: #333;
     font-size: 24px;
 }
-
 .image-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-
 .image-container img {
     max-width: 100%;
     height: auto;
@@ -150,23 +144,17 @@ ul#menu li a {
     transition: color 0.3s; /* Transicion suave del color al pasar el cursor */
 }
 
-/* Cambiar el color cuando paso el cursor */
-ul#menu li a:hover {
-    color: #00FF00; 
-}
-
 /* Estilos  para los botones */
 .btn {
     background-color: #333; 
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 10px 10px;
 }
-
 .btn:hover {
     background-color: #ff6600; /* Cambia al color que desees */
-    color: #fff;
+    color: #dc4646;
 }
 
 /* Estilos para la galería de imágenes */
@@ -175,23 +163,19 @@ ul#menu li a:hover {
     padding: 20px;
     text-align: center;
 }
-
 .image-gallery h2 {
     color: #ece1e1;
     font-size: 24px;
 }
 .image-gallery {
-    background-image: url(imagenes/camionero.jpg);
-    
+    background-image: url(imagenes/camionero.jpg);   
 }
-
 .image-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-
 .image-container img {
     max-width: 100%;
     height: auto;
@@ -213,9 +197,6 @@ ul#menu li a:hover {
         width:10%;
     }
 }
-
-
-
 /* Estilos para el formulario */
 form {
     background-color: #fff;
@@ -229,7 +210,6 @@ form {
     max-width: 900px;
     transition: transform 0.3s, opacity 0.3s;
 }
-
 fieldset {
     border: 1px solid #ddd;
     padding: 15px;
@@ -238,12 +218,10 @@ fieldset {
     flex: 1;
     margin: 10px;
 }
-
 label {
     display: block;
     margin-bottom: 5px;
 }
-
 input[type="text"],
 input[type="tel"],
 input[type="email"],
@@ -254,7 +232,6 @@ select {
     border-radius: 5px;
     margin-bottom: 15px;
 }
-
 button {
     background-color: #de2b2b; /* Cambia */
     color: #fff;
@@ -264,11 +241,9 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
 }
-
 button:hover {
     background-color: #555; /* Cambia al color */
 }
-
 .container {
     color: #ccc;
 }
